# Cathedral-Constraint-Field

./: .gitignore  README.md  pyproject.toml
examples/: cathedral_bridge_demo.py  completeness_demo.py  simple_cathedral.py  verify_agent_identity.py
src/cathedral_constraint_field/: __init__.py  cathedral_bridge.py  completeness_manifest.py  core.py  refusal_ledger.py
tests/: test_cathedral_bridge_manifest.py  test_completeness_manifest.py  test_core.py  test_refusal_ledger.py
