[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cathedral-constraint-field"
version = "0.2.0"
description = "A deliberate framework for modeling elegant constraint fields in complex systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AILIFE1", email = "ailife1@example.com"}
]
keywords = [
    "constraints", "optimization", "constraint-satisfaction", 
    "ai-alignment", "mathematical-modeling", "cathedral"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/AILIFE1/Cathedral-Constraint-Field"
Repository = "https://github.com/AILIFE1/Cathedral-Constraint-Field"
Issues = "https://github.com/AILIFE1/Cathedral-Constraint-Field/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cathedral_constraint_field"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
